<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClosetStylist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login Strings -->
    <string name="login_label_username">User Name</string>
    <string name="login_label_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_value_username_default_value">anh</string>
    <string name="login_value_password_default_value">****</string>
    <string name="login_btn_laundry_bag">LaundryBag</string>
    
    <!-- Add Item Strings -->
    <string name="add_item_label_name">Name</string>
    <string name="add_item_value_name_default_value">polo1</string>
    <string name="add_item_label_description">Description</string>
    <string name="add_item_value_description_default_value">Description</string>
    <string name="add_item_label_image_link">ImageLink:</string>
    <string name="add_item_value_image_link">Add Image</string>
    <string name="add_item_label_edit_image">Edit Image</string>
    <string name="add_item_label_color">Color</string>
    <string name="add_item_label_age">Age</string>
    <string name="add_item_label_temp_min">Temperature Min(F)</string>
    <string name="add_item_label_temp_max">Temperature Max(F)</string>
    <string name="add_item_label_category">Category</string>
    <string name="add_item_label_brand">Brand</string>
    <string name="add_item_label_material">Material</string>
    <string name="add_item_label_crop_image_link">CropImageLink:</string>
    <string name="add_item_label_style">Style</string>
    
    <string name="add_item_btn_register">Register</string>
    <string name="add_item_btn_reset">Reset</string>
    <string name="add_item_btn_discard">Discard</string>
    
    <string name="add_item_message_no_external_storage">No SD card is found</string>
    <string name="add_item_message_no_image">Please take a picture of this item</string>
    <string name="add_item_message_tempMax_smaller_tempMin">Maximum temperature must be higher than minimum temperature</string>
    <string name="add_item_message_no_color">Please choose a color for this item</string>
    
    <!-- Edit Item Strings -->
    <string name="edit_item_label_name">Name</string>
    <string name="edit_item_value_name_default_value">polo1</string>
    <string name="edit_item_label_description">Description</string>
    <string name="edit_item_value_description_default_value">Description</string>
    <string name="edit_item_label_image_link">ImageLink:</string>
    <string name="edit_item_btn_edit_image">Edit Image</string>
    <string name="edit_item_label_color">Color</string>
    <string name="edit_item_label_age">Age</string>
    <string name="edit_item_label_temp_min">Temperature Min(F)</string>
    <string name="edit_item_label_temp_max">Temperature Max(F)</string>
    <string name="edit_item_label_category">Category</string>
    <string name="edit_item_label_brand">Brand</string>
    <string name="edit_item_label_material">Material</string>
    <string name="edit_item_label_crop_image_link">CropImageLink:</string>
    <string name="edit_item_label_style">Style</string>
    <string name="edit_item_label_dirty">Dirty</string>
    
    <string name="edit_item_btn_reset">Reset</string>
    <string name="edit_item_btn_save">Save</string>
    <string name="edit_item_btn_new_image">NewImage</string>
    
    <string name="edit_item_message_no_external_storage">No SD card is found</string>
    <string name="edit_item_message_no_image">Please take a picture of this item</string>
    <string name="edit_item_message_tempMax_smaller_tempMin">Maximum temperature must be higher than minimum temperature</string>
    <string name="edit_item_message_no_color">Please choose a color for this item</string>
    
    <!-- View Item Strings -->
    <string name="view_item_label_name">Name</string>
    <string name="view_item_value_name_default_value">polo1</string>
    <string name="view_item_label_description">Description</string>
    <string name="view_item_value_description_default_value">Description</string>
    <string name="view_item_label_image_link">ImageLink:</string>
    <string name="view_item_value_image_link">To Be Removed</string>
    <string name="view_item_label_edit_image">Edit Image</string>
    <string name="view_item_label_color">Color</string>
    <string name="view_item_label_age">Age</string>
    <string name="view_item_label_temp_min">Temperature Min(F)</string>
    <string name="view_item_label_temp_max">Temperature Max(F)</string>
    <string name="view_item_label_category">Category</string>
    <string name="view_item_label_brand">Brand</string>
    <string name="view_item_label_material">Material</string>
    <string name="view_item_label_crop_image_link">CropImageLink:</string>
    <string name="view_item_label_style">Style</string>
    <string name="view_item_label_dirty">Dirty</string>
        
    <string name="view_item_btn_edit">Edit</string>
    <string name="view_item_btn_delete">Delete</string>
    
    <string name="view_item_dialog_deletion_title">Closing Activity</string>
    <string name="view_item_dialog_deletion_message">Are you sure you want to Delete this Item?</string>
    <string name="view_item_dialog_deletion_yes">Yes</string>
    <string name="view_item_dialog_deletion_no">No</string>
    
    <!-- My Closet Strings -->
    <string name="my_closet_btn_add_item">AddItem</string>
    <string name="my_closet_btn_back">Back</string>
    
    <string name="my_closet_label_item_name">Name: </string>
    <string name="my_closet_value_item_name_default_value">No Name</string>
    <string name="my_closet_label_item_description">Description: </string>
    <string name="my_closet_value_item_description_default_value">No Description</string>
    
    <string name="my_closet_menu_create_default_closet_male">Create Male Closet</string>
    <string name="my_closet_menu_create_default_closet_female">Create Female Closet</string>
    
    <!-- Outfit Of The Day Strings -->
    <string name="outfit_label_title">OutfitOfTheDay</string>
    <string name="outfit_btn_wear">Wear</string>
    <string name="outfit_btn_home">Home</string>
    
    <string name="outfit_message_no_top">No top item found in your closet</string>
    <string name="outfit_message_no_bottom">No bottom item found in your closet</string>
    <string name="outfit_message_no_weather_info">Cannot obtain weather information</string>
    <string name="outfit_message_no_outfit">No outfit can be matched</string>
    
    <!-- Register Strings -->
    <string name="register_label_username">UserName</string>
    <string name="register_label_password">Password</string>
    <string name="register_label_gender">Gender</string>
    <string name="register_label_age">Age</string>
    <string name="register_label_zip">ZipCode</string>
    <string name="register_label_style">Style</string>
    <string name="register_label_favorite_color">FavoriteColors</string>
    <string name="register_label_laundry_schedule">LaundrySchedule</string>
    <string name="register_label_laundry_day">LaundryDay</string>
    <string name="register_label_relationship_status">RelationshipStatus</string>
    <string name="register_label_body_measurement">BodyMeasurement</string>
    <string name="register_label_height">Height</string>
    <string name="register_label_weight">Weight</string>
    <string name="register_label_natural_waist">NaturalWaist</string>
    <string name="register_label_low_waist">LowWaist</string>
    <string name="register_label_inseam">Inseam</string>
    <string name="register_label_hip">Hip</string>
    <string name="register_label_eye_color">EyeColor</string>
    <string name="register_label_hair_color">HairColor</string>
    <string name="register_label_chest">Chest</string>
    <string name="register_label_clothing_size">ClothingSize</string>
    <string name="register_label_top">Top</string>
    <string name="register_label_pants">Pants</string>
    <string name="register_label_dresses">Dresses</string>
    <string name="register_label_shoes">Shoes</string>
    <string name="register_label_longtitude">Longtitude</string>
    <string name="register_label_latitude">Latitude</string>
    
    <string name="register_btn_register">Register</string>
    <string name="register_btn_reset">Reset</string>
    <string name="register_btn_location_from_zip">LocationFromZip</string>
    <string name="register_btn_zip_from_location">ZipFromLocation</string>
    
    <string name="register_menu_load_male">LoadMaleUserProfile</string>
    <string name="register_menu_load_female">LoadFemaleUserProfile</string>
    
    <string-array name="register_spinner_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    
    <!-- View User Profile Strings -->
    <string name="view_user_profile_label_username">UserName</string>
    <string name="view_user_profile_value_username">UserName</string>
    <string name="view_user_profile_label_password">Password</string>
    <string name="view_user_profile_value_password">Password</string>
    <string name="view_user_profile_label_gender">Gender</string>
    <string name="view_user_profile_value_gender">Gender</string>
    <string name="view_user_profile_label_zip">Zip</string>
    <string name="view_user_profile_value_zip">Zip</string>
    <string name="view_user_profile_label_laundry_schedule">LaundrySchedule</string>
    <string name="view_user_profile_value_laundry_schedule">LaundrySchedule</string>
    <string name="view_user_profile_label_laundry_day">LaundryDay</string>
    <string name="view_user_profile_value_laundry_day">LaundryDay</string>
    <string name="view_user_profile_label_current_location">CurrentLocation</string>
    <string name="view_user_profile_label_current_latitude">CurrentLatitude</string>
    <string name="view_user_profile_label_current_longtitude">CurrentLongtitude</string>

    <!-- Laundry Bag Strings -->
    <string name="laundry_bag_btn_dummy">Dummy</string>
    
    <string name="laundry_bag_label_item_name">Name: </string>
    <string name="laundry_bag_value_item_name_default_value">No Name</string>
    <string name="laundry_bag_label_item_description">Description: </string>
    <string name="laundry_bag_value_item_description_default_value">No Description</string>
    
    <string name="laundry_bag_menu_etc">Etc</string>
    
</resources>
